[metadata]
name = cognac
version = 0.0.1
description = A command framework with type hints
# long_description = file: README.md
keywords = command cmd click argparse typing
license = BSD 3-Clause License
classifiers =

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = typing_extensions

[options.package_data]
cognac = py.typed

[options.packages.find]
exclude = examples tests
